--- a/src/app/index2.css
+++ b/src/app/index2.css
@@ -3,38 +3,19 @@
 .detection-container {
   position: relative;
   width: 100%;
-  max-width: 440px;
+  max-width: 340px;
   margin: auto;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   height: 100%;
-  /* background: antiquewhite; */
 }
 
 .video-container {
   position: relative;
   width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.video-container.correct {
-  border-color: rgb(0, 128, 83);
-  /* transform: scale(1.1); */
-
-  /* transition: border 1s ease, transform 1s ease, background-color 1s ease; */
-  box-shadow: 0 4px 2px rgba(0, 255, 0, 0.6);
-}
-
-.video-container.wrong {
-  border-color: rgb(255, 27, 27);
-  /* transform: scale(0.9); */
-
-  /* transition: border 1s ease, transform 1s ease, background-color 1s ease; */
-  box-shadow: 0 4px 20px rgba(255, 0, 0, 0.6);
+  height: 300px;
 }
 
 video,
@@ -44,7 +25,6 @@ canvas {
   left: 0;
   width: 100%;
   height: 100%;
-  border-radius: 3%;
   object-fit: cover;
   transform: scaleX(-1);
 }
