--- a/src/app/index.css
+++ b/src/app/index.css
@@ -70,19 +70,15 @@
 
 /* src/VideoRecorder.css */
 .main {
-  font-family: "Arial", sans-serif;
-  background-color: #f0f0f0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
   width: 100%;
 }
 
 .container {
   width: 100%;
-  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 h1 {
