--- a/src/app/index.css
+++ b/src/app/index.css
@@ -70,15 +70,19 @@
 
 /* src/VideoRecorder.css */
 .main {
+  font-family: "Arial", sans-serif;
+  background-color: hsl(15deg 55% 6%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
   width: 100%;
 }
 
 .container {
   width: 100%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 h1 {
@@ -167,7 +171,7 @@ h1 {
 .chip {
   display: inline-flex;
   flex-direction: row;
-  background-color: rgb(255, 0, 0);
+  background-color: rgb(24, 24, 24);
   border: none;
   cursor: default;
   height: 60px;
@@ -186,12 +190,12 @@ h1 {
 }
 
 .chip.active {
-  background-color: rgb(0, 136, 255);
+  background-color: rgb(229, 255, 247);
   transition: background-color 0.5s ease-in-out;
 }
 
 .chip.inactive {
-  background-color: rgb(255, 0, 0);
+  background-color: rgb(24, 24, 24);
   transition: background-color 0.5s ease-in-out;
 }
 
@@ -221,6 +225,7 @@ h1 {
   white-space: nowrap;
   padding-left: 12px;
   padding-right: 12px;
+  color: #00d000;
 }
 .chip-svg {
   color: #999999;
