--- a/src/app/index.css
+++ b/src/app/index.css
@@ -171,7 +171,7 @@ h1 {
 .chip {
   display: inline-flex;
   flex-direction: row;
-  background-color: rgb(24, 24, 24);
+  background-color: rgb(0 54 161);
   border: none;
   cursor: default;
   height: 60px;
@@ -190,7 +190,7 @@ h1 {
 }
 
 .chip.active {
-  background-color: rgb(229, 255, 247);
+  background-color: rgb(0 54 161);
   transition: background-color 0.5s ease-in-out;
 }
 
@@ -225,7 +225,7 @@ h1 {
   white-space: nowrap;
   padding-left: 12px;
   padding-right: 12px;
-  color: #00d000;
+  color: lime;
 }
 .chip-svg {
   color: #999999;
