--- a/src/app/index.css
+++ b/src/app/index.css
@@ -71,12 +71,13 @@
 /* src/VideoRecorder.css */
 .main {
   font-family: "Arial", sans-serif;
-  background-color: hsl(15deg 55% 6%);
+  margin-top: 140px;
+  /* background-color: hsl(15deg 55% 6%); */
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  margin: 0;
-  width: 100%;
+  /* height: 100vh; */
+  /* margin: 0; */
+  /* width: 100%; */
 }
 
 .container {
