--- a/src/app/index2.css
+++ b/src/app/index2.css
@@ -19,6 +19,53 @@
   border: 1px solid transparent;
   border-radius: 37px;
 }
+.half-circle {
+  width: 200px; /* Full width of the circle */
+  height: 100px; /* Half the height of the circle */
+  background-color: #3498db; /* Color of the circle */
+  border-top-left-radius: 100px; /* Half of the width */
+  border-top-right-radius: 100px; /* Half of the width */
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.hamburger {
+  display: block;
+  position: absolute;
+  top: 100px;
+  width: 100%;
+  left: 0;
+  transform: translate(-50%, -50%);
+  /* box-sizing: border-box; */
+  /* content: '';
+
+  /* pointer-events: none; */
+  /* border: 4px solid var(--button-circle); */
+  /* border-radius: 50%; */
+  -webkit-animation-duration: 0.9s;
+  animation-duration: 0.9s;
+  -webkit-animation-name: intervalHamburgerBorder;
+  animation-name: intervalHamburgerBorder;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+}
+
+@keyframes intervalHamburgerBorder {
+  0% {
+    opacity: 1;
+    -webkit-transform: translateY(-20%);
+    transform: translateY(-20%);
+  }
+  80% {
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+  }
+}
 
 /* top 0px -50px 29px -28px #e93f33 */
 /* down 0px 50px 29px -28px #e93f33 */
@@ -26,20 +73,42 @@
 /* right 50px 0 29px -28px #e93f33 */
 
 .video-container.active {
-  border-right-color: transparent;
+  /* border-right-color: transparent;
   border-bottom-color: transparent;
   border-top-color: transparent;
   box-shadow: 0px -50px 29px -28px #e93f33;
-  transition: box-shadow 0.5s ease-in-out, border-left-color 0.5s ease-in-out;
+  transition: box-shadow 0.5s ease-in-out, border-left-color 0.5s ease-in-out; */
 }
 
 .video-container.inactive {
-  border-left-color: transparent;
-  border-right-color: transparent;
+  /* border-left-color: transparent; */
+  /* border-right-color: transparent;
   border-bottom-color: transparent;
   border-top-color: transparent;
   box-shadow: 0 0 0px 0 transparent;
-  transition: box-shadow 0.5s ease-in-out, border-left-color 0.5s ease-in-out;
+  transition: box-shadow 0.5s ease-in-out, border-left-color 0.5s ease-in-out; */
+}
+
+.face-svg {
+  position: absolute;
+  top: 32%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 50%;
+  width: 100%;
+  height: auto;
+  border: 1px solid transparent;
+  border-radius: 100%;
+}
+
+.face-svg.active {
+  box-shadow: 0px -50px 29px -28px #e93f33;
+  transition: box-shadow 0.5s ease-in-out;
+}
+
+.face-svg.inactive {
+  box-shadow: 0px 0px 29px -28px transparent;
+  transition: box-shadow 0.5s ease-in-out;
 }
 
 video,
@@ -176,7 +245,7 @@ canvas {
   border-radius: 5px;
   font-size: 0.7em;
 
-  color: #f0f0f0;
+  color: #535353;
   text-align: center;
 }
 
