--- a/src/app/index.css
+++ b/src/app/index.css
@@ -150,8 +150,19 @@ h1 {
   transition: background-color 0.3s;
 }
 
+.controls button:disabled {
+  background-color: #6c6c6c;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: not-allowed;
+  margin: 0 5px;
+  border-radius: 5px;
+}
+
 .controls button:hover {
-  background-color: #303f9f;
+  /* background-color: #303f9f; */
 }
 
 .controls {
@@ -171,7 +182,7 @@ h1 {
 .chip {
   display: inline-flex;
   flex-direction: row;
-  background-color: rgb(0 54 161);
+  background-color: #3f51b5;
   border: none;
   cursor: default;
   height: 60px;
@@ -190,12 +201,12 @@ h1 {
 }
 
 .chip.active {
-  background-color: rgb(0 54 161);
+  background-color: #00ff2f;
   transition: background-color 0.5s ease-in-out;
 }
 
 .chip.inactive {
-  background-color: rgb(24, 24, 24);
+  background-color: 3f51b5;
   transition: background-color 0.5s ease-in-out;
 }
 
@@ -225,7 +236,7 @@ h1 {
   white-space: nowrap;
   padding-left: 12px;
   padding-right: 12px;
-  color: lime;
+  color: rgb(255, 255, 255);
 }
 .chip-svg {
   color: #999999;
